# validit

./: Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yaml
src/: bench.rs  lib.rs  macros.rs  macros_test.rs  valid.rs  valid_test.rs  validate.rs  validate_ext.rs  validate_impl.rs
tests/t/: main.rs  t10_tuple_struct.rs  t10_validate_ext.rs
