[package]
name = "validit"
readme = "README.md"
version = "0.1.1"
edition = "2021"
authors = [
    "Zhang Yanpo <drdr.xp@gmail.com>",
]
categories = ["algorithms", "data-structures"]
description = "Validate data structures internal state"
documentation = "https://docs.rs/validit"
homepage = "https://github.com/drmingdrmer/validit"
keywords = ["validation"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/drmingdrmer/validit"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyerror = { version = "0.1.10", optional = true }


[features]

default = ["macros"]

# Enable macros such as `less!(a,b)`
macros = ["dep:anyerror"]

# Enable backtrace when generating an error.
# Stable rust does not support backtrace.
backtrace = ["anyerror/backtrace"]


[package.metadata.docs.rs]

# Enable this flag to show all types/mods, including the feature enabled ones on docs.rs
all-features = true

# Sort modules by appearance order for crate `docs`.
# https://doc.rust-lang.org/rustdoc/unstable-features.html#--sort-modules-by-appearance-control-how-items-on-module-pages-are-sorted
rustdoc-args = ["-Z", "unstable-options", "--sort-modules-by-appearance"]
